@@ -213,13 +213,13 @@ L<https://github.com/michal-josef-spacek/Hash-Check>.
 
 =head1 AUTHOR
 
-Michal Špaček L<mailto:skim@cpan.org>
+Michal Josef Špaček L<mailto:skim@cpan.org>
 
 L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2009-2016 Michal Špaček
+ © 2009-2016 Michal Josef Špaček
  BSD 2-Clause License
 
 =head1 VERSION
