@@ -7,7 +7,7 @@ use inc::Module::Install;
 
 # Definition.
 abstract 'Tied construct for hash key checking.';
-author 'Michal Spacek <skim@cpan.org>';
+author 'Michal Josef Spacek <skim@cpan.org>';
 author_requires 'English' => 0;
 author_requires 'File::Object' => 0.01;
 author_requires 'Test::Pod' => 0;
