@@ -1,6 +1,7 @@
 0.09
  - Update Module::Install to 1.19 version.
  - Update author github username.
+ - Update author name.
 
 0.08 2016-08-27T10:51:31+02:00
  - Update minimum Perl version to right Module::Install way. Fix number?
